--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+*, ::before, ::after { border-width: 0; } 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,6 +20,7 @@
 }
 
 body {
+  @apply leading-[normal] m-0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
