fix: slider and subdomains problem and review text

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,3 +33,14 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+body:has(.modal-open) {
+  overflow-y: hidden;
+}
+
+.review-text > p {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
