--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,3 +72,23 @@ body:has(.modal-open) {
 .blog-page h4 {
   @apply text-md lg:text-lg font-semibold;
 }
+
+.loading-btn {
+  width: 18px;
+  height: 18px;
+  border: 2px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
